--- a/src/main/resources/hu/petrik/konyvjava/hello-view.fxml
+++ b/src/main/resources/hu/petrik/konyvjava/hello-view.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="hu.petrik.konyvjava.HelloController">
+<VBox alignment="CENTER_LEFT" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="hu.petrik.konyvjava.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <Button mnemonicParsing="false" text="Törlés"  onAction="#DeleteKonyv"/>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <TableView fx:id="tableview">
+        <columns>
+            <TableColumn fx:id="columnTitle" />
+            <TableColumn fx:id="columnAuthor" />
+            <TableColumn fx:id="columnYear" />
+            <TableColumn fx:id="columnPages" />
+        </columns>
+    </TableView>
 </VBox>
